--- a/com.unity.testing.graphics-performance/Editor/StaticAnalysis/PlayStation/HDRP.StaticAnalysis.PlayStation.Editor.asmdef
+++ b/com.unity.testing.graphics-performance/Editor/StaticAnalysis/PlayStation/HDRP.StaticAnalysis.PlayStation.Editor.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "Unity.RenderPipelines.HighDefinition-PerformanceTests.XboxOne.Editor",
+    "name": "HDRP.StaticAnalysis.PlayStation.Editor",
+    "rootNamespace": "",
     "references": [
         "GUID:91836b14885b8a34196f4aa8303d7793",
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
@@ -19,25 +20,13 @@
     "autoReferenced": false,
     "defineConstraints": [
         "UNITY_INCLUDE_TESTS",
-        "SHADERANALYSIS_SUPPORT_XBOXONE",
-        "SRP_SUPPORT_XBOXONE",
-        "SRP_SUPPORT_XBOXONE"
+        "SHADERANALYSIS_SUPPORT"
     ],
     "versionDefines": [
         {
             "name": "com.unity.shaderanalysis",
             "expression": "0.0",
             "define": "SHADERANALYSIS_SUPPORT"
-        },
-        {
-            "name": "com.unity.shaderanalysis.xboxone.nda",
-            "expression": "0.0",
-            "define": "SHADERANALYSIS_SUPPORT_XBOXONE"
-        },
-        {
-            "name": "com.unity.render-pipelines.xboxone",
-            "expression": "0.0",
-            "define": "SRP_SUPPORT_XBOXONE"
         }
     ],
     "noEngineReferences": false
