--- a/.yamato/_abv.yml
+++ b/.yamato/_abv.yml
@@ -43,6 +43,10 @@ all_project_ci_nightly_trunk:
          rerun: on-new-revision
       -  path: .yamato/all-hdrp_performancetests.yml#PR_HDRP_PerformanceTests_trunk
          rerun: on-new-revision
+      -  path: .yamato/all-vikingvillage_builtin.yml#PR_VikingVillage_BuiltIn_trunk
+         rerun: on-new-revision
+      -  path: .yamato/all-vikingvillage_urp.yml#PR_VikingVillage_URP_trunk
+         rerun: on-new-revision
       -  path: .yamato/_projectcontext.yml#all_package_ci_project_trunk
          rerun: on-new-revision
     triggers:
@@ -121,6 +125,10 @@ all_project_ci_nightly_CUSTOM-REVISION:
       -  path: .yamato/all-urp_performance_lostcrypt.yml#PR_URP_Performance_LostCrypt_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/all-hdrp_performancetests.yml#PR_HDRP_PerformanceTests_CUSTOM-REVISION
+         rerun: always
+      -  path: .yamato/all-vikingvillage_builtin.yml#PR_VikingVillage_BuiltIn_CUSTOM-REVISION
+         rerun: always
+      -  path: .yamato/all-vikingvillage_urp.yml#PR_VikingVillage_URP_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/_projectcontext.yml#all_package_ci_project_CUSTOM-REVISION
          rerun: always
