--- a/.yamato/_editor_pinning.yml
+++ b/.yamato/_editor_pinning.yml
@@ -8,7 +8,7 @@
 ---
 
 editor-pinning-target-to-ci:
-    name: Merge 2021.1/yamato/old-package-ci-image to 2021.1/yamato/old-package-ci-image-ci
+    name: Merge 2021.1/staging to 2021.1/ci/editor-pinning
     agent:
         type: Unity::VM
         image: package-ci/ubuntu:v1.2.4-701242
@@ -19,16 +19,16 @@ editor-pinning-target-to-ci:
       -  echo $GIT_BRANCH
       -  |5-
 
-                     if [[ "$GIT_BRANCH" != "2021.1/yamato/old-package-ci-image" ]]; then
-                         echo "Should run on '2021.1/yamato/old-package-ci-image' but is running on '$GIT_BRANCH'"
+                     if [[ "$GIT_BRANCH" != "2021.1/staging" ]]; then
+                         echo "Should run on '2021.1/staging' but is running on '$GIT_BRANCH'"
                          exit 1
                      fi
       -  git fetch
-      -  git checkout 2021.1/yamato/old-package-ci-image
-      -  git checkout 2021.1/yamato/old-package-ci-image-ci
+      -  git checkout 2021.1/staging
+      -  git checkout 2021.1/ci/editor-pinning
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  git merge 2021.1/yamato/old-package-ci-image --no-ff -X theirs
+      -  git merge 2021.1/staging --no-ff -X theirs
       -  git push
 editor-pinning-update:
     name: Update pinned editor versions
@@ -47,21 +47,21 @@ editor-pinning-update:
       -  sudo apt-get install yamato-parser -y
       -  |5-
 
-                     if [[ "$GIT_BRANCH" != "2021.1/yamato/old-package-ci-image" ]]; then
-                         echo "Should run on '2021.1/yamato/old-package-ci-image' but is running on '$GIT_BRANCH'"
+                     if [[ "$GIT_BRANCH" != "2021.1/staging" ]]; then
+                         echo "Should run on '2021.1/staging' but is running on '$GIT_BRANCH'"
                          exit 1
                      fi
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  pipenv run python3 .yamato/script/editor_scripts/update_revisions.py --target-branch 2021.1/yamato/old-package-ci-image-ci
+      -  pipenv run python3 .yamato/script/editor_scripts/update_revisions.py --target-branch 2021.1/ci/editor-pinning
     dependencies:
       -  .yamato/_editor_pinning.yml#editor-pinning-target-to-ci
     triggers:
         recurring:
-          -  branch: 2021.1/yamato/old-package-ci-image
+          -  branch: 2021.1/staging
              frequency: 23 * * ?
 editor-pinning-merge-revisions-2021.1:
-    name: Merge [2021.1] revisions to 2021.1/yamato/old-package-ci-image [no ABV]
+    name: Merge [2021.1] revisions to 2021.1/staging [no ABV]
     agent:
         type: Unity::VM
         image: package-ci/ubuntu:v1.2.4-701242
@@ -77,15 +77,15 @@ editor-pinning-merge-revisions-2021.1:
       -  sudo apt-get install yamato-parser -y
       -  |5-
 
-                     if [[ "$GIT_BRANCH" != "2021.1/yamato/old-package-ci-image-ci" ]]; then
-                         echo "Should run on '2021.1/yamato/old-package-ci-image-ci' but is running on '$GIT_BRANCH'"
+                     if [[ "$GIT_BRANCH" != "2021.1/ci/editor-pinning" ]]; then
+                         echo "Should run on '2021.1/ci/editor-pinning' but is running on '$GIT_BRANCH'"
                          exit 1
                      fi
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  pipenv run python3 .yamato/script/editor_scripts/merge_revisions.py --revision $GIT_REVISION --target-branch 2021.1/yamato/old-package-ci-image --track 2021.1
+      -  pipenv run python3 .yamato/script/editor_scripts/merge_revisions.py --revision $GIT_REVISION --target-branch 2021.1/staging --track 2021.1
 editor-pinning-merge-revisions-2021.1-abv:
-    name: Merge [2021.1] revisions to 2021.1/yamato/old-package-ci-image [ABV]
+    name: Merge [2021.1] revisions to 2021.1/staging [ABV]
     allow_failure: true
     dependencies:
       -  .yamato/_abv.yml#all_project_ci_2021.1
@@ -104,13 +104,13 @@ editor-pinning-merge-revisions-2021.1-abv:
       -  sudo apt-get install yamato-parser -y
       -  |5-
 
-                     if [[ "$GIT_BRANCH" != "2021.1/yamato/old-package-ci-image-ci" ]]; then
-                         echo "Should run on '2021.1/yamato/old-package-ci-image-ci' but is running on '$GIT_BRANCH'"
+                     if [[ "$GIT_BRANCH" != "2021.1/ci/editor-pinning" ]]; then
+                         echo "Should run on '2021.1/ci/editor-pinning' but is running on '$GIT_BRANCH'"
                          exit 1
                      fi
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  pipenv run python3 .yamato/script/editor_scripts/merge_revisions.py --revision $GIT_REVISION --target-branch 2021.1/yamato/old-package-ci-image --track 2021.1
+      -  pipenv run python3 .yamato/script/editor_scripts/merge_revisions.py --revision $GIT_REVISION --target-branch 2021.1/staging --track 2021.1
 editor-pinning-merge-all:
     name: Merge all [no CI][2021.1 no ABV]
     variables:
@@ -120,7 +120,7 @@ editor-pinning-merge-all:
 editor-pinning-merge-all-ci:
     name: Merge all [CI][2021.1 no ABV]
     triggers:
-        expression: push.branch eq "2021.1/yamato/old-package-ci-image-ci" AND push.changes.any match "**/_latest_editor_versions*.metafile"
+        expression: push.branch eq "2021.1/ci/editor-pinning" AND push.changes.any match "**/_latest_editor_versions*.metafile"
     variables:
         CI: true
     dependencies:
@@ -139,5 +139,5 @@ editor-pinning-store-green:
       -  pipenv run python3 .yamato/script/editor_scripts/store_green_revisions.py --target-branch $GIT_BRANCH --track 2021.1 --apikey $YAMATO_KEY
     triggers:
         recurring:
-          -  branch: 2021.1/yamato/old-package-ci-image
+          -  branch: 2021.1/staging
              frequency: 7 * * ?
